@@ -5,6 +5,7 @@ Version 1.1
 * vsum: error message -> stderr, not stdout
 * Support new EDV2 that is produced by R2DBE.  Note that no official documentation exists at this time.  Interface is reverse engineered for now.
 * Add Mark6 awareness to printVDIFheader.  If the Mark6 signature is found at the beginning, 28 bytes will be skipped to allow proper decoding.
+* testmk6: test/example program for mark6 reading capabilities.  Does simple gather operation and file summary at this point.
 
 Version 1.0
 ~~~~~~~~~~~
